fix(app): Update copy of the whole website.

--- a/src/faq.html
+++ b/src/faq.html
@@ -95,10 +95,10 @@
                 <ul class="faq__list">
                   <li class="faq__item">
                     <input class="faq__toggle" id="faq-1" type="checkbox"/>
-                    <label class="faq__label" for="faq-1">Why should I become part of Cursief? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
+                    <label class="faq__label" for="faq-1">What are the benefits of being a member? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                     <div class="faq__content">
-                      <p>Clients are not always looking for a single developer/designer/etc. What Cursief does is make it easier for them to find a team of people, with different skills, that work great together.</p>
-                      <p><strong>Becoming a member is easy</strong>, we don't require stuff like signed contracts and minimum weekly/monthly working hours. Why wouldn't you want to increase the chance of getting work?</p>
+                      <p>Cursief makes it easier for  businesses to find a team of professionals, with different skills, who work great together.</p>
+                      <p>Members of Cursief have more visibility and a higher chance of getting new job offers. The team that forms will synergize better, since the members have worked together before.</p>
                     </div>
                   </li>
                   <li class="faq__item">
@@ -113,50 +113,59 @@
                     <input class="faq__toggle" id="faq-3" type="checkbox"/>
                     <label class="faq__label" for="faq-3">What information do you need from me? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                     <div class="faq__content">
-                      <p>We need an image for on our website, your job/function title, your strengths, a small bio and a link to your portfolio. We always try to create a pool of people who are in sync with each other, so meeting in person and having a few chats is kind of necessary. We are looking for like-minded people with a passion for their work!</p>
+                      <p>For your profile on our website, we require:</p>
+                        <ol>
+                          <li>a portrait photo of yourself;</li>
+                          <li>your current job title;</li>
+                          <li>a few personal traits;</li>
+                          <li>and a short bio that describes you as a professional.</li>
+                        </ol>
+                        <p>We want to get to know you better! We always want to  have a  mix of people with great synergy, so meeting in person and having a few chats would be  awesome!</p>
                     </div>
                   </li>
                   <li class="faq__item">
                     <input class="faq__toggle" id="faq-4" type="checkbox"/>
                     <label class="faq__label" for="faq-4">Does this cost anything? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                     <div class="faq__content">
-                      <p><strong>Nope! Nothing, nada!</strong></p>
-                      <p>We keep this easy and simple, so we don't have to charge anything.</p>
+                      <p><strong>Nope! Nothing, <i>nada</i>!</strong></p>
+                      <p>We keep this easy and simple.  We don't expect members to pay any fees: being a part of Cursief will create more opportunities to get hired, and that's all we want!                      </p>
                     </div>
                   </li>
                 </ul>
               </div>
               <div class="faq__column">
-                <h2 class="faq__heading">For <span>(potential)</span> clients</h2>
+                <h2 class="faq__heading">For <span>(future)</span> clients</h2>
                 <ul class="faq__list">
                   <li class="faq__item">
                     <input class="faq__toggle" id="faq-5" type="checkbox"/>
                     <label class="faq__label" for="faq-5">What is a collective? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                     <div class="faq__content">
-                      <p>A collective can also be called a 'pool', it's a fancy name for a bunch of passionate people helping each other finding work and passing along any work they don't have the time for and knowledge of.</p>
-                      <p>Instead of constantly having to approach different people, asking if they are available and have the required knowledge, we make it easier to find exactly what you are looking for!</p>
+                      <p><strong>It's an easier way to connect!</strong> A collective is a network, or “pool” of passionate professionals who want to  collaborate with others in their field.</p>
+                      <p>No more approaching different people, asking if they are available and have the required skill set . We make it easier to find exactly who you're looking for!</p>
                     </div>
                   </li>
                   <li class="faq__item">
                     <input class="faq__toggle" id="faq-6" type="checkbox"/>
                     <label class="faq__label" for="faq-6">Why shouldn't I hire everyone on my own? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                     <div class="faq__content">
-                      <p>If you want to hire everyone on your own, go ahead, no one is stopping you.</p>
-                      <p>Using Cursief helps to create a single point for contacting, we make sure everyone you selected is available at the same time and if necessary we can help finding someone else who fits better in your team. Let us do the work!</p>
+                      <p><strong>We've already done that work for you!</strong> At Cursief, there is a pool of great professionals with diverse skill sets waiting for you. Creating your dream-team is easy!</p>
+                      <p>You don't have to spend time approaching various people, figuring out if they are available, and if they have the right knowledge for the job – we've already got you covered! </p>
+                      <p>When a selected member isn't available, we will personally recommend a great alternative from our own collective.</p>
                     </div>
                   </li>
                   <li class="faq__item">
                     <input class="faq__toggle" id="faq-7" type="checkbox"/>
                     <label class="faq__label" for="faq-7">Who do I contact for the project?<svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                     <div class="faq__content">
-                      <p>After your members are picked and submitted, we will contact all the members and between them they will decide who is going to be the primary contact for you. We want to prevent that you have to approach everyone seperately, that's something we take care of.</p>
+                      <p>After we've received your application and the project has been reviewed by the team, a primary contact will be assigned. They will be your main source of contact. <em>That's it!</em></p>
                     </div>
                   </li>
                   <li class="faq__item">
                     <input class="faq__toggle" id="faq-8" type="checkbox"/>
                     <label class="faq__label" for="faq-8">How does billing work? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                     <div class="faq__content">
-                      <p>We won't be between you and the Cursief member(s), they will send you separate invoices and you'll sign separate contract with them.</p>
+                      <p>Cursief's primary goal is to make contacting professionals easy and simple, with no unnecessary steps in between.</p>
+                      <p>You’ll sign separate contracts with each team member and they will in turn invoice you independently.</p>
                     </div>
                   </li>
                 </ul>
