--- a/src/index.html
+++ b/src/index.html
@@ -99,10 +99,10 @@
             <div class="section__column section__text">
               <h1>We are the web generation</h1>
               <div class="section__description">
-                <p>Cursief is a pool of web-veterans with years of experience creating websites, webshops and webapps. Being bundled under one name gives us a lot of flexibility taking on small and large projects, our members scale depending on what you need for your company and project.</p>
-                <p>You probably still have a lot of questions right? We created an FAQ to answer all your burning questions.</p>
+                <p>Cursief is a pool of web-veterans with years of experience  creating websites, webshops and webapps. Being part of a collective gives us a lot of flexibility on what kind of projects we can take on and our members scale depending on what you need for your company and project.</p>
+                <p>You probably have a lot of questions, right? We created an FAQ to clear things up for you.</p>
               </div>
-              <a class="readmore" href="/faq" title="Go to FAQ page">Visit our FAQ</a>
+              <a class="readmore" href="/faq" title="Go to FAQ page">Read the FAQ</a>
             </div>
             <div class="section__column section__media">
               <img src="images/introduction-o.svg" alt="">
@@ -113,7 +113,7 @@
           <div class="section__container section__container--wide">
             <div class="section__column">
               <h1>Choose your own <span class="strikethrough">adventure</span> team</h1>
-              <p class="section__description">Not every project needs an agency with project managers, marketeers and a big building. Pay only for who/what you really need!</p>
+              <p class="section__description">We like to be transparent about who you’re hiring. Below you’ll find a list of highly skilled professionals for you to choose from. Only pay who you’re gonna need.</p>
               <div class="section__note">Swipe for more members</div>
             </div>
           </div>
@@ -244,7 +244,7 @@
             </div>
             <div class="section__column">
               <h1>Clients & Projects</h1>
-              <p class="section__description">Members of Cursief have worked for a wide range of clients in a bunch of different sectors. Big, small, start-up, enterprise, everything is possible.</p>
+              <p class="section__description">Members of Cursief have worked for a wide variety of clients in many different sectors. Big, small, start-up, enterprise, your company – everything is possible!</p>
               <!-- <a class="readmore" title="View a few cases from our members" href="#">View some cases</a> -->
             </div>
           </div>
@@ -305,9 +305,9 @@
                     <h3 class="contact-form__step-title">1. Personal info</h3>
                     <p class="contact-form__question">What do you call yourself?</p>
                     <div class="contact-form__option"><input type="text" placeholder="Your name goes here" required></div>
-                    <p class="contact-form__question">On what address can we email you?</p>
+                    <p class="contact-form__question">Where can we email you?</p>
                     <div class="contact-form__option"><input type="email" placeholder="Your email" required></div>
-                    <p class="contact-form__question contact-form__question--optional">What number should we call you on?</p>
+                    <p class="contact-form__question contact-form__question--optional">Can we call you?</p>
                     <div class="contact-form__option"><input type="tel" placeholder="Your phone number"></div>
                   </div>
                 </div>
