fix(app): Update copy.

--- a/src/faq.html
+++ b/src/faq.html
@@ -113,10 +113,10 @@
                   </li>
                   <li class="faq__item">
                     <input class="faq__toggle" id="faq-2" type="checkbox"/>
-                    <label class="faq__label" for="faq-2">Are you a recruiter? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
+                    <label class="faq__label" for="faq-2">Is Cursief a recruitment agency?  <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                     <div class="faq__content">
-                      <p><strong>Absolutely not.</strong> You can call us a recruiter if you want, but the only similarity is that we want to connect companies to people looking for work. The main difference is we won't be between you and the client and we don't ask any money from either side.</p>
-                      <p>Cursief primarily got created because we got tired of recruiters not actually knowing anything about our professions, handling clients poorly and not representing our strenghts.</p>
+                      <p><strong>Nope!</strong> Cursief was created because we feel that recruitment agencies do not fully understand our profession and misrepresent our strengths. We are a network of professionals who understand the industry and want to provide our services directly to the client, cutting out the middle man.</p>
+                      <p>With our transparent hiring process the team and the client will have more control over the cooperation during the entirety of the project.</p>
                     </div>
                   </li>
                   <li class="faq__item">
