--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
               <img src="images/banner-heading.png" alt="">
             </div>
             <div class="banner__content">
-              <p>We design, build and launch products for startups, established companies and ourselves. We help businesses grow through effective design and strategy. We live and breath the web. Let’s create some great things together!</p>
+              <p>We design, build and launch products for startups, established companies and ourselves. We help businesses grow through effective design and strategy. We live and breathe the web. Let’s create some great things together!</p>
               <a class="button button--secondary" href="#contact">Contact us</a>
             </div>
           </div>
