--- a/src/faq.html
+++ b/src/faq.html
@@ -97,7 +97,23 @@
           </div>
         </section>
 
-        <section class="section">
+        <section class="section section--intro section--smallhead is-active">
+          <div class="section__container">
+            <div class="section__column section__text">
+              <h2 class="">What is Cursief?</h2>
+              <div class="section__description">
+                <p>Cursief makes it easier for businesses to find a team of professionals, with different skills, who work great together.</p>
+                <p>Members of Cursief are individual freelancers who have a varied professional background with their own strengths and expertise, in the fields of web development, web design, digital marketing and copywriting.</p>
+                <p>As a future client, you're able to control the team structure and know who you're going to be working with up-front.</p>
+              </div>
+            </div>
+            <div class="section__column section__media">
+              <img src="images/teamwork.svg" alt="">
+            </div>
+          </div>
+        </section>
+
+        <section class="section section--smallhead">
           <div class="section__container">
             <div class="faq">
               <div class="faq__column">
@@ -107,8 +123,7 @@
                     <input class="faq__toggle" id="faq-1" type="checkbox"/>
                     <label class="faq__label" for="faq-1">What are the benefits of being a member? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                     <div class="faq__content">
-                      <p>Cursief makes it easier for  businesses to find a team of professionals, with different skills, who work great together.</p>
-                      <p>Members of Cursief have more visibility and a higher chance of getting new job offers. The team that forms will synergize better, since the members have worked together before.</p>
+                      <p>Members of Cursief have more visibility and a higher chance of getting new job offers. The client-picked team members who are going to be working together have a professional history together and will form a stronger coordinated team.</p>
                     </div>
                   </li>
                   <li class="faq__item">
@@ -116,7 +131,7 @@
                     <label class="faq__label" for="faq-2">Is Cursief a recruitment agency?  <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                     <div class="faq__content">
                       <p><strong>Nope!</strong> Cursief was created because we feel that recruitment agencies do not fully understand our profession and misrepresent our strengths. We are a network of professionals who understand the industry and want to provide our services directly to the client, cutting out the middle man.</p>
-                      <p>With our transparent hiring process the team and the client will have more control over the cooperation during the entirety of the project.</p>
+                      <p>With our transparent hiring process both the team and the client will have more control over the cooperation during the entirety of the project.</p>
                     </div>
                   </li>
                   <li class="faq__item">
@@ -124,13 +139,13 @@
                     <label class="faq__label" for="faq-3">What information do you need from me? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                     <div class="faq__content">
                       <p>For your profile on our website, we require:</p>
-                        <ol>
+                        <ul>
                           <li>a portrait photo of yourself;</li>
-                          <li>your current job title;</li>
+                          <li>your current professional title;</li>
                           <li>a few personal traits;</li>
-                          <li>and a short bio that describes you as a professional.</li>
-                        </ol>
-                        <p>We want to get to know you better! We always want to  have a  mix of people with great synergy, so meeting in person and having a few chats would be  awesome!</p>
+                          <li>a short bio that describes you as a professional.</li>
+                        </ul>
+                        <p>Lastly, <strong>we want to get to know you better!</strong> We always seek to have a diverse mix of people with great synergy, so meeting in person and having a few chats would be awesome!</p>
                     </div>
                   </li>
                   <li class="faq__item">
@@ -138,7 +153,7 @@
                     <label class="faq__label" for="faq-4">Does this cost anything? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                     <div class="faq__content">
                       <p><strong>Nope! Nothing, <i>nada</i>!</strong></p>
-                      <p>We keep this easy and simple.  We don't expect members to pay any fees: being a part of Cursief will create more opportunities to get hired, and that's all we want!                      </p>
+                      <p>We keep this easy and simple. We don't expect members to pay any fees: being a part of Cursief will create more opportunities to get hired, and that's all we want!</p>
                     </div>
                   </li>
                 </ul>
@@ -150,7 +165,7 @@
                     <input class="faq__toggle" id="faq-5" type="checkbox"/>
                     <label class="faq__label" for="faq-5">What is a collective? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                     <div class="faq__content">
-                      <p><strong>It's an easier way to connect!</strong> A collective is a network, or “pool” of passionate professionals who want to  collaborate with others in their field.</p>
+                      <p><strong>It's an easier way to connect!</strong> A collective is a network, or “pool” of passionate professionals who want to collaborate with others in their field.</p>
                       <p>No more approaching different people, asking if they are available and have the required skill set . We make it easier to find exactly who you're looking for!</p>
                     </div>
                   </li>
@@ -175,7 +190,7 @@
                     <label class="faq__label" for="faq-8">How does billing work? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                     <div class="faq__content">
                       <p>Cursief's primary goal is to make contacting professionals easy and simple, with no unnecessary steps in between.</p>
-                      <p>You’ll sign separate contracts with each team member and they will in turn invoice you independently.</p>
+                      <p>You'll sign separate contracts with each team member and they will in turn invoice you independently.</p>
                     </div>
                   </li>
                 </ul>
