fix(faq): Update FAQ copy.

--- a/src/faq.html
+++ b/src/faq.html
@@ -103,7 +103,7 @@
               <h2 class="">What is Cursief?</h2>
               <div class="section__description">
                 <p>Cursief makes it easier for businesses to find a team of professionals, with different skills, who work great together.</p>
-                <p>Members of Cursief are individual freelancers who have a varied professional background with their own strengths and expertise, in the fields of web development, web design, digital marketing and copywriting.</p>
+                <p>Members of Cursief are individual freelancers who have varied professional backgrounds with their own strengths and expertise, in the fields of web development, web design, digital marketing and copywriting.</p>
                 <p>As a future client, you're able to control the team structure and know who you're going to be working with up-front.</p>
               </div>
             </div>
@@ -165,8 +165,8 @@
                     <input class="faq__toggle" id="faq-5" type="checkbox"/>
                     <label class="faq__label" for="faq-5">What is a collective? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                     <div class="faq__content">
-                      <p><strong>It's an easier way to connect!</strong> A collective is a network, or “pool” of passionate professionals who want to collaborate with others in their field.</p>
-                      <p>No more approaching different people, asking if they are available and have the required skill set . We make it easier to find exactly who you're looking for!</p>
+                      <p><strong>It's an easier way to connect!</strong> A collective is a network, or "pool" of passionate professionals who want to collaborate with others in their field.</p>
+                      <p>We strive to have a diverse mix of members to accommodate for various needs and positions in your projects.</p>
                     </div>
                   </li>
                   <li class="faq__item">
