--- a/src/index.html
+++ b/src/index.html
@@ -141,7 +141,7 @@
                 I'm a dedicated and loyal person, always looking for ways to improve myself and others in the process. I have a masters degree in language and culture.
               </div>
               <div class="member__footer">
-                <a class="member__anchor" title="Go to Gideon Heilbron's portfolio" href="https://www.linkedin.com/in/tamara-duijvestijn-6b346240/" target="_blank" rel="noopener noreferrer">
+                <a class="member__anchor" title="Go to Tamara Duijvestijn's portfolio" href="https://www.linkedin.com/in/tamara-duijvestijn-6b346240/" target="_blank" rel="noopener noreferrer">
                   <span>Visit my portfolio</span>
                   <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg"><path d="M16 16H2V2h7V0H2a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V9h-2v7zM11 0v2h3.59l-9.83 9.83 1.41 1.41L16 3.41V7h2V0h-7z" fill="#F0834A" fill-rule="nonzero"/></svg>
                 </a>
@@ -185,24 +185,23 @@
                 </a>
               </div>
             </li>
-            <li class="member member--empty" role="button" tabindex="0">
+            <li class="member" role="button" tabindex="0">
               <div class="member__top">
                 <div class="member__avatar">
-                  <img src="" alt="">
+                  <img src="images/avatar-kaleigh.jpg" alt="">
                 </div>
-                <h1 class="member__name">Your face <br>here?</h1>
-                <h2 class="member__title"></h2>
-                <h3 class="member__tags"></h3>
+                <h1 class="member__name">Kaleigh <br>Hunter</h1>
+                <h2 class="member__title">Copywriter</h2>
+                <h3 class="member__tags">Creative & versatile</h3>
               </div>
               <div class="member__description">
-                <p>We are always on the lookout for new members to join Cursief!</p>
-                <p>Interested? Contact us at <strong>hello@cursief.co</strong> and check out our FAQ to answer most of your questions.</p>
+                  I write to highlight each project's personality and goals through clear and unique copy; always working hard to keep learning and improving my trade. English is my native language.
               </div>
               <div class="member__footer">
-                <!-- <a class="member__anchor" title="Go to Murtada al Mousawy's portfolio" href="https://murtada.nl/" target="_blank" rel="noopener noreferrer">
+                <a class="member__anchor" title="Go to Kaleigh Hunter's portfolio" href="https://kaleighjo.com" target="_blank" rel="noopener noreferrer">
                   <span>Visit my portfolio</span>
                   <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg"><path d="M16 16H2V2h7V0H2a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V9h-2v7zM11 0v2h3.59l-9.83 9.83 1.41 1.41L16 3.41V7h2V0h-7z" fill="#F0834A" fill-rule="nonzero"/></svg>
-                </a> -->
+                </a>
               </div>
             </li>
             <li class="member member--empty" role="button" tabindex="0">
@@ -216,7 +215,7 @@
               </div>
               <div class="member__description">
                 <p>We are always on the lookout for new members to join Cursief!</p>
-                <p>Interested? Contact us at <strong>hello@cursief.co</strong> and check out our FAQ to answer most of your questions.</p>
+                <p>Interested? Contact us at <strong><a href="mailto:hello@cursief.co">hello@cursief.co</a></strong> and check out the <strong><a href="/faq">FAQ page</a></strong> to answer most of your questions.</p>
               </div>
               <div class="member__footer">
                 <!-- <a class="member__anchor" title="Go to Gideon Heilbron's portfolio" href="https://gideonheilbron.nl" target="_blank" rel="noopener noreferrer">
