--- a/src/faq.html
+++ b/src/faq.html
@@ -108,7 +108,7 @@
               </div>
             </div>
             <div class="section__column section__media">
-              <img src="images/teamwork.svg" alt="">
+              <img src="images/teamwork.png" alt="Two men and two women manning different positions of an abstract machine made up of big cogs.">
             </div>
           </div>
         </section>
