--- a/src/index.html
+++ b/src/index.html
@@ -115,7 +115,7 @@
               <a class="readmore" href="/faq" title="Go to FAQ page">Read the FAQ</a>
             </div>
             <div class="section__column section__media">
-              <img src="images/introduction-o.svg" alt="">
+              <img src="images/introduction.png" alt="Illustration of a woman sitting at a desk working on her laptop.">
             </div>
           </div>
         </section>
