fix(app): Update missing alt attributes in images.

--- a/src/index.html
+++ b/src/index.html
@@ -68,17 +68,17 @@
           <ul class="social">
             <li class="social-item">
               <a class="social-item__anchor" href="https://twitter.com/cursief_hq" target="_blank" rel="noopener noreferrer" title="Go to our Twitter profile">
-                <img src="images/icon-twitter.svg" alt="">
+                <img src="images/icon-twitter.svg" alt="Twitter icon">
               </a>
             </li>
             <li class="social-item">
               <a class="social-item__anchor" href="https://linkedin.com/company/cursief-collective" target="_blank" rel="noopener noreferrer" title="Go to our LinkedIn page">
-                <img src="images/icon-linkedin.svg" alt="">
+                <img src="images/icon-linkedin.svg" alt="LinkedIn icon">
               </a>
             </li>
             <li class="social-item">
               <a class="social-item__anchor" href="https://github.com/cursief" target="_blank" rel="noopener noreferrer" title="Go to our GitHub page">
-                <img src="images/icon-github.svg" alt="">
+                <img src="images/icon-github.svg" alt="GitHub icon">
               </a>
             </li>
             <!-- <li class="social-item">
@@ -96,7 +96,7 @@
           <div class="banner__blob banner__blob--2"></div>
           <div class="banner__container">
             <div class="banner__heading">
-              <img src="images/banner-heading.png" alt="">
+              <img src="images/banner-heading.png" alt="Header banner background">
             </div>
             <div class="banner__content">
               <p>We design, build and launch products for startups, established companies and ourselves. We help businesses grow through effective design and strategy. We live and breathe the web. Let’s create some great things together!</p>
@@ -131,7 +131,7 @@
             <li class="member" role="button" tabindex="0">
               <div class="member__top">
                 <div class="member__avatar">
-                  <img src="images/avatar-tamara.jpg" alt="">
+                  <img src="images/avatar-tamara.jpg" alt="Tamara Duijvestijn, Copywriter">
                 </div>
                 <h1 class="member__name">Tamara <br>Duijvestijn</h1>
                 <h2 class="member__title">Copywriter</h2>
@@ -150,7 +150,7 @@
             <li class="member" role="button" tabindex="0">
               <div class="member__top">
                 <div class="member__avatar">
-                  <img src="images/avatar-murtada.jpg" alt="">
+                  <img src="images/avatar-murtada.jpg" alt="Murtada al Mousawy, Full-stack developer">
                 </div>
                 <h1 class="member__name">Murtada <br>al Mousawy</h1>
                 <h2 class="member__title">Full-stack developer</h2>
@@ -169,7 +169,7 @@
             <li class="member" role="button" tabindex="0">
               <div class="member__top">
                 <div class="member__avatar">
-                  <img src="images/avatar-gideon.jpg" alt="">
+                  <img src="images/avatar-gideon.jpg" alt="Gideon Heilbron, Front-end developer">
                 </div>
                 <h1 class="member__name">Gideon <br>Heilbron</h1>
                 <h2 class="member__title">Front-end developer</h2>
@@ -188,7 +188,7 @@
             <li class="member" role="button" tabindex="0">
               <div class="member__top">
                 <div class="member__avatar">
-                  <img src="images/avatar-kaleigh.jpg" alt="">
+                  <img src="images/avatar-kaleigh.jpg" alt="Kaleigh Hunter, Copywriter">
                 </div>
                 <h1 class="member__name">Kaleigh <br>Hunter</h1>
                 <h2 class="member__title">Copywriter</h2>
@@ -207,7 +207,7 @@
             <li class="member member--empty" role="button" tabindex="0">
               <div class="member__top">
                 <div class="member__avatar">
-                  <img src="" alt="">
+                  <!-- <img src="" alt=""> -->
                 </div>
                 <h1 class="member__name">Your face <br>here?</h1>
                 <h2 class="member__title"></h2>
@@ -276,8 +276,8 @@
           <div class="section__container">
             <h1>Contact us</h1>
             <div class="contact" data-step="0">
-              <img class="contact__stamp contact__stamp--1" src="images/stamp-1.svg" alt="">
-              <img class="contact__stamp contact__stamp--2" src="images/stamp-2.svg" alt="">
+              <img class="contact__stamp contact__stamp--1" src="images/stamp-1.svg" alt="Blue stamp image of an airplane.">
+              <img class="contact__stamp contact__stamp--2" src="images/stamp-2.svg" alt="Red stamp image that says 'post'">
               <div class="contact__steps-overview"></div>
               <div class="contact-form">
                 <!-- Start form -->
@@ -461,17 +461,17 @@
           <ul class="social social--footer">
             <li class="social-item">
               <a class="social-item__anchor" href="https://twitter.com/cursief_hq" target="_blank" rel="noopener noreferrer" title="Go to our Twitter profile">
-                <img src="images/icon-twitter.svg" alt="">
+                <img src="images/icon-twitter.svg" alt="Twitter icon">
               </a>
             </li>
             <li class="social-item">
               <a class="social-item__anchor" href="https://linkedin.com/company/cursief-collective" target="_blank" rel="noopener noreferrer" title="Go to our LinkedIn page">
-                <img src="images/icon-linkedin.svg" alt="">
+                <img src="images/icon-linkedin.svg" alt="LinkedIn icon">
               </a>
             </li>
             <li class="social-item">
               <a class="social-item__anchor" href="https://github.com/cursief" target="_blank" rel="noopener noreferrer" title="Go to our GitHub page">
-                <img src="images/icon-github.svg" alt="">
+                <img src="images/icon-github.svg" alt="GitHub icon">
               </a>
             </li>
             <!-- <li class="social-item">
