--- a/src/faq.html
+++ b/src/faq.html
@@ -68,17 +68,17 @@
           <ul class="social">
             <li class="social-item">
               <a class="social-item__anchor" href="https://twitter.com/cursief_hq" target="_blank" rel="noopener noreferrer" title="Go to our Twitter profile">
-                <img src="images/icon-twitter.svg" alt="">
+                <img src="images/icon-twitter.svg" alt="Twitter icon">
               </a>
             </li>
             <li class="social-item">
               <a class="social-item__anchor" href="https://linkedin.com/company/cursief-collective" target="_blank" rel="noopener noreferrer" title="Go to our LinkedIn page">
-                <img src="images/icon-linkedin.svg" alt="">
+                <img src="images/icon-linkedin.svg" alt="LinkedIn icon">
               </a>
             </li>
             <li class="social-item">
               <a class="social-item__anchor" href="https://github.com/cursief" target="_blank" rel="noopener noreferrer" title="Go to our GitHub page">
-                <img src="images/icon-github.svg" alt="">
+                <img src="images/icon-github.svg" alt="GitHub icon">
               </a>
             </li>
   <!--           <li class="social-item">
@@ -213,17 +213,17 @@
           <ul class="social social--footer">
             <li class="social-item">
               <a class="social-item__anchor" href="https://twitter.com/cursief_hq" target="_blank" rel="noopener noreferrer" title="Go to our Twitter profile">
-                <img src="images/icon-twitter.svg" alt="">
+                <img src="images/icon-twitter.svg" alt="Twitter icon">
               </a>
             </li>
             <li class="social-item">
               <a class="social-item__anchor" href="https://linkedin.com/company/cursief-collective" target="_blank" rel="noopener noreferrer" title="Go to our LinkedIn page">
-                <img src="images/icon-linkedin.svg" alt="">
+                <img src="images/icon-linkedin.svg" alt="LinkedIn icon">
               </a>
             </li>
             <li class="social-item">
               <a class="social-item__anchor" href="https://github.com/cursief" target="_blank" rel="noopener noreferrer" title="Go to our GitHub page">
-                <img src="images/icon-github.svg" alt="">
+                <img src="images/icon-github.svg" alt="GitHub icon">
               </a>
             </li>
             <!-- <li class="social-item">
