--- a/src/index.html
+++ b/src/index.html
@@ -316,11 +316,11 @@
                   <div class="contact-form__step-content">
                     <h3 class="contact-form__step-title">1. Personal info</h3>
                     <p class="contact-form__question">What do you call yourself?</p>
-                    <div class="contact-form__option"><input type="text" placeholder="Your name goes here" required></div>
+                    <div class="contact-form__option"><input type="text" placeholder="Your name goes here" name="clientName" required></div>
                     <p class="contact-form__question">Where can we email you?</p>
-                    <div class="contact-form__option"><input type="email" placeholder="Your email" required></div>
+                    <div class="contact-form__option"><input type="email" placeholder="Your email" name="clientEmail" required></div>
                     <p class="contact-form__question contact-form__question--optional">Can we call you?</p>
-                    <div class="contact-form__option"><input type="tel" placeholder="Your phone number"></div>
+                    <div class="contact-form__option"><input type="tel" name="clientPhone" placeholder="Your phone number"></div>
                   </div>
                 </div>
 
